[gd_scene load_steps=32 format=4 uid="uid://bkj8y12fr0r1b"]

[ext_resource type="Script" uid="uid://cfr0l3fan3bb5" path="res://scripts/end.gd" id="1_oc5t2"]
[ext_resource type="Texture2D" uid="uid://8ryt7ebqinxg" path="res://assets/Seasonal Tilesets/3 - Tropics/Background parts/5 - Sky_color.png" id="2_oc5t2"]
[ext_resource type="Texture2D" uid="uid://bdx8tswbj1rgn" path="res://assets/Seasonal Tilesets/3 - Tropics/Terrain (16 x 16).png" id="2_p7m4f"]
[ext_resource type="Texture2D" uid="uid://dfifoy12x8mbr" path="res://assets/images/exit_button.png" id="3_bvfni"]
[ext_resource type="Texture2D" uid="uid://bqklkvvjc2w28" path="res://assets/Seasonal Tilesets/3 - Tropics/Background parts/4 - Background_clouds.png" id="3_njoby"]
[ext_resource type="Texture2D" uid="uid://clmq2s8i1mpod" path="res://sprites/Sprite Pack 8/4 - Percy/Idle (32 x 32).png" id="4_8hmjt"]
[ext_resource type="Texture2D" uid="uid://cc1pedbard6jc" path="res://assets/images/play_button.png" id="4_s4tl2"]
[ext_resource type="Shader" uid="uid://dfntwhvgcqen8" path="res://shaders/moviment_clouds.gdshader" id="4_sf0ys"]
[ext_resource type="Texture2D" uid="uid://rn42dxt7d2jb" path="res://assets/Seasonal Tilesets/3 - Tropics/Background parts/3 - Floating_clouds.png" id="5_stj65"]
[ext_resource type="Texture2D" uid="uid://cpjwxgr2tiuri" path="res://assets/Seasonal Tilesets/3 - Tropics/Background parts/2 - Waters_version_2.png" id="6_8cwnd"]
[ext_resource type="Texture2D" uid="uid://bg3l317un0pqc" path="res://assets/Seasonal Tilesets/3 - Tropics/Background parts/1 - Waters_version_1.png" id="7_liw33"]
[ext_resource type="Script" uid="uid://caumqcslln13i" path="res://scripts/control_hud.gd" id="12_wrlrt"]
[ext_resource type="FontFile" uid="uid://c21emsrtbwqgc" path="res://assets/text/RevMiniPixel.ttf" id="13_wrlrt"]
[ext_resource type="Texture2D" uid="uid://biuicvpny4kg7" path="res://assets/coins/00_Coin-Sprites.png" id="14_6tafp"]
[ext_resource type="Texture2D" uid="uid://cadoouepow4g3" path="res://assets/coins/01_Coin-Sprites.png" id="15_0rapm"]
[ext_resource type="Texture2D" uid="uid://bfud13rivj126" path="res://assets/coins/02_Coin-Sprites.png" id="16_xbbny"]
[ext_resource type="Texture2D" uid="uid://dm2k3vr306ga3" path="res://assets/coins/03_Coin-Sprites.png" id="17_l3jns"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wrlrt"]
shader = ExtResource("4_sf0ys")
shader_parameter/move_speed = 0.02

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bvfni"]
texture = ExtResource("2_p7m4f")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
11:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
11:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
11:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
4:8/0 = 0

[sub_resource type="TileSet" id="TileSet_s4tl2"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_bvfni")

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lv4"]
atlas = ExtResource("4_8hmjt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee763"]
atlas = ExtResource("4_8hmjt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl5ow"]
atlas = ExtResource("4_8hmjt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovs12"]
atlas = ExtResource("4_8hmjt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc5t2"]
atlas = ExtResource("4_8hmjt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_njoby"]
atlas = ExtResource("4_8hmjt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf0ys"]
atlas = ExtResource("4_8hmjt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stj65"]
atlas = ExtResource("4_8hmjt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cwnd"]
atlas = ExtResource("4_8hmjt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_liw33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee763")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl5ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovs12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc5t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njoby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf0ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stj65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cwnd")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_afbui"]
frames = 4
speed_scale = 3.0
frame_0/texture = ExtResource("14_6tafp")
frame_1/texture = ExtResource("15_0rapm")
frame_1/duration = 1.0
frame_2/texture = ExtResource("16_xbbny")
frame_2/duration = 1.0
frame_3/texture = ExtResource("17_l3jns")
frame_3/duration = 1.0

[node name="End" type="Node2D"]
script = ExtResource("1_oc5t2")

[node name="background" type="ParallaxBackground" parent="."]

[node name="05" type="ParallaxLayer" parent="background"]
position = Vector2(-8, -150)
motion_mirroring = Vector2(432, 0)

[node name="sky" type="Sprite2D" parent="background/05"]
position = Vector2(8, 36)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_oc5t2")
centered = false

[node name="04" type="ParallaxLayer" parent="background"]
position = Vector2(-8, -150)
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(432, 0)

[node name="clouds_statics" type="Sprite2D" parent="background/04"]
position = Vector2(8, 28)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_njoby")
centered = false

[node name="03" type="ParallaxLayer" parent="background"]
position = Vector2(-8, -150)
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(432, 0)

[node name="clouds_anim" type="Sprite2D" parent="background/03"]
texture_repeat = 2
material = SubResource("ShaderMaterial_wrlrt")
position = Vector2(8, 46)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_stj65")
centered = false

[node name="02" type="ParallaxLayer" parent="background"]
position = Vector2(-8, -150)
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(432, 0)

[node name="water" type="Sprite2D" parent="background/02"]
position = Vector2(8, 21)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_8cwnd")
centered = false

[node name="01" type="ParallaxLayer" parent="background"]
position = Vector2(-8, -150)
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(432, 0)

[node name="water" type="Sprite2D" parent="background/01"]
position = Vector2(8, 15)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_liw33")
centered = false

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAgAAQAEAAEAAAABAAgAAQAEAAEAAAACAAgAAQAEAAEAAAADAAgAAQAEAAEAAAAEAAgAAQAEAAEAAAAFAAgAAQAEAAEAAAAGAAgAAQAEAAEAAAAHAAgAAQAEAAEAAAAIAAgAAQAEAAEAAAAJAAgAAQAEAAEAAAAKAAgAAQAEAAEAAAALAAgAAQAEAAEAAAAMAAgAAQAEAAEAAAANAAgAAQAEAAEAAAAOAAgAAQAEAAEAAAAPAAgAAQAEAAEAAAAQAAgAAQAEAAEAAAARAAgAAQAEAAEAAAASAAgAAQAEAAEAAAATAAgAAQAFAAEAAAD//wgAAQADAAEAAAAAAAkAAQAEAAIAAAABAAkAAQAEAAIAAAACAAkAAQAEAAIAAAADAAkAAQAEAAIAAAAEAAkAAQAEAAIAAAAFAAkAAQAEAAIAAAAGAAkAAQAEAAIAAAAHAAkAAQAEAAIAAAAIAAkAAQAEAAIAAAAJAAkAAQAEAAIAAAAKAAkAAQAEAAIAAAALAAkAAQAEAAIAAAAMAAkAAQAEAAIAAAANAAkAAQAEAAIAAAAOAAkAAQAEAAIAAAAPAAkAAQAEAAIAAAAQAAkAAQAEAAIAAAARAAkAAQAEAAIAAAASAAkAAQAEAAIAAAATAAkAAQAFAAIAAAD//wkAAQADAAIAAAA=")
tile_set = SubResource("TileSet_s4tl2")

[node name="AnimatedPlayer" type="AnimatedSprite2D" parent="."]
position = Vector2(147, 113)
sprite_frames = SubResource("SpriteFrames_liw33")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.71596

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(215, 117)
scale = Vector2(0.163, 0.122769)
texture = ExtResource("3_bvfni")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(81, 118)
scale = Vector2(0.175773, 0.15)
texture = ExtResource("4_s4tl2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="start" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 44.0
offset_top = 101.0
offset_right = 117.0
offset_bottom = 132.0

[node name="exit" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 176.0
offset_top = 102.0
offset_right = 254.0
offset_bottom = 131.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_wrlrt")

[node name="container" type="MarginContainer" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="coins_container" type="HBoxContainer" parent="HUD/Control/container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2

[node name="coins_counter" type="Label" parent="HUD/Control/container/coins_container"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_wrlrt")
theme_override_font_sizes/font_size = 8
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="coins_icon" type="TextureRect" parent="HUD/Control/container/coins_container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = SubResource("AnimatedTexture_afbui")

[node name="Label" type="Label" parent="."]
offset_left = 41.0
offset_top = 6.0
offset_right = 263.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_wrlrt")
theme_override_font_sizes/font_size = 16
text = "Parabéns, você conseguiu!!!

"

[node name="Label2" type="Label" parent="."]
offset_left = 87.0
offset_top = 32.0
offset_right = 266.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_wrlrt")
theme_override_font_sizes/font_size = 8
text = "          Desenvolvedores:

Felipe Mariano - 172317392
Matheus Henrique - 172311530
Ramon Romano - 172311597
Vinicius Stencel - 172315471

"

[connection signal="button_down" from="CanvasLayer/start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="CanvasLayer/exit" to="." method="_on_exit_button_down"]
